apps/hackcenter-stream/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackcenter-stream
  namespace: hackcenter-stream
  labels:
    app: hackcenter-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hackcenter-stream
  template:
    metadata:
      labels:
        app: hackcenter-stream
    spec:
      containers:
        - name: hackcenter-stream
          image: docker.io/library/nginx:latest
          resources:
            limits:
              cpu: 100m
              memory: 128M
            requests:
              cpu: 20m
              memory: 32M
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: data
          configMap:
            name: hackcenter-stream
